[package]
name = "todo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A framework for making client-side single-page apps
yew = "0.19.3"
# Convenience crate for working with local and session storage in browser
gloo-storage = "0.2.1"

# A generic serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
# A JSON serialization file format
serde_json = "1.0"
