[package]
name = "todo_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true

[dependencies]
# wee_alloc: The Wasm-Enabled, Elfin Allocator
wee_alloc = "0.4"
# A framework for making client-side single-page apps
yew = "0.19.3"
# Convenience crate for working with local and session storage in browser
gloo-storage = "0.2.1"
# Bindings for all Web APIs, a procedurally generated crate from WebIDL 
web-sys = "0.3"

# A generic serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
# A JSON serialization file format
serde_json = "1.0"

# A lightweight logging facade for Rust 
log = "0.4.14"
# A logger that sends a message with its Rust source's line and filename to the brow…
wasm-logger = "0.2.0"

# The uncomplicated state management library for Yew.
bounce = "0.2.0"
